--- a/views/newPost.handlebars
+++ b/views/newPost.handlebars
@@ -1,2 +1,48 @@
-{{!-- Prompt to enter title and contents with a create/save button
-    When saved, it goes back to dashboard --}}
+<!--New Posts: includes Title, Content, Music Sample URL, Create/Save Button. When Create/Save is clicked, it will go back to Dashboard-->
+
+
+<div class="py-12">
+    <div class="max-w-7xl mx-auto sm:px-6 lg:px-8">
+        <div class="bg-white overflow-hidden shadow-lg sm:rounded-lg">
+            <div class="p-6 bg-white border-b border-gray-200">
+                <h1 class="np-title mb-8 text-3xl font-bold">NEW POST</h1>
+<!--START New Post Fields START-->
+                <form method="POST" action="action.php">
+                    <!--Title-->
+                    <div class="mb-4">
+                            <label class="text-xl text-gray-600">Title <span class="text-red-500">*</span></label></br>
+                            <input type="text" class="rounded-lg border-2 border-gray-300 p-2 w-full" name="title" id="title" value="" required>
+                        </div>
+                    <!--Description-->
+                        <div class="mb-4">
+                            <label class="text-xl text-gray-600">Description</label></br>
+                            <input type="text" class="rounded-lg border-2 border-gray-300 p-2 w-full" name="description" id="description" placeholder="(Optional)">
+                        </div>
+                    <!--Content-->
+                        <div class="mb-4">
+                            <label class="text-xl text-gray-600">Content <span class="text-red-500">*</span></label></br>
+                            <textarea name="content" class="rounded-lg border-2 border-gray-500">
+                                
+                            </textarea>
+                        </div>
+                    <!--URL-->
+                        <div class="mb-8">
+                            <label class="text-xl text-gray-600">URL</label></br>
+                            <input type="text" class="rounded-lg border-2 border-gray-300 p-2 w-full" name="url" id="url" placeholder="(Optional)">
+                        </div>
+                    <!--Submit Button-->
+                        <div class="flex flex-row-reverse p-1">
+                            <button role="submit" class="w-3/12 rounded-lg p-3 bg-black text-white hover:bg-yellow-500" required>Submit</button>
+                        </div>
+                    </form>
+<!--END New Post Fields END-->
+                </div>
+            </div>
+        </div>
+    </div>
+<!--Text Editor Add-On-->
+    <script src="https://cdn.ckeditor.com/4.16.0/standard/ckeditor.js"></script>
+
+    <script>
+        CKEDITOR.replace( 'content' );
+    </script>
