db seeded and login page running

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,7 +10,7 @@
         flex items-center justify-center">
   <div class="w-full h-100 border-2 shadow-lg rounded">
       <h1 class="greeting text-xl md:text-2xl font-bold leading-tight mt-12 text-center px-8"> WELCOME BACK! </h1>
-      <form class="mt-6 px-10" action="#" method="POST">
+      <form id='login-form' class="mt-6 px-10" action="#" method="POST">
       <!--Email Input-->
         <div>
           <label class="block text-gray-700">Email Address</label>
