--- a/views/feed.handlebars
+++ b/views/feed.handlebars
@@ -27,6 +27,9 @@
             <div class="w-full lg:w-8/12">
                 <div class="flex items-center justify-between">
                     <h1 class="text-xl font-bold text-gray-700 md:text-2xl">Post</h1>
+                    {{#each rhythms as |rhythm| }}
+                        <p>{{rhythm.name}}</p>
+                    {{/each}}
                     <div>
                         <select class="w-full border-gray-300 rounded-md shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
                             <option>Latest</option>
