--- a/views/feed.handlebars
+++ b/views/feed.handlebars
@@ -27,9 +27,6 @@
             <div class="w-full lg:w-8/12">
                 <div class="flex items-center justify-between">
                     <h1 class="text-xl font-bold text-gray-700 md:text-2xl">Post</h1>
-                    {{#each rhythms as |rhythm| }}
-                        <p>{{rhythm.name}}</p>
-                    {{/each}}
                     <div>
                         <select class="w-full border-gray-300 rounded-md shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
                             <option>Latest</option>
@@ -38,116 +35,26 @@
                     </div>
                 </div>
                 <div class="mt-6">
+                    {{#each posts as |post| }}   
                     <div class="max-w-4xl px-10 py-6 mx-auto bg-white rounded-lg shadow-md">
-                        <div class="flex items-center justify-between"><span class="font-light text-gray-600">Jun 1,
-                                2020</span><a href="#"
+                        <div class="flex items-center justify-between"><span class="font-light text-gray-600">{{format_date post.date_created}}</span><a href="#"
                                 class="px-2 py-1 font-bold text-gray-100 bg-gray-600 rounded hover:bg-gray-500">Laravel</a>
                         </div>
-                        <div class="mt-2"><a href="#" class="text-2xl font-bold text-gray-700 hover:underline">Build
-                                Your New Idea with Laravel Freamwork.</a>
-                            <p class="mt-2 text-gray-600">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                Tempora expedita dicta totam aspernatur doloremque. Excepturi iste iusto eos enim
-                                reprehenderit nisi, accusamus delectus nihil quis facere in modi ratione libero!</p>
+                        <div class="mt-2"><a href="#" class="text-2xl font-bold text-gray-700 hover:underline">{{post.title}}</a>
+                            <p class="mt-2 text-gray-600">{{post.content}}</p>
                         </div>
                         <div class="flex items-center justify-between mt-4"><a href="#"
                                 class="text-blue-500 hover:underline">Read more</a>
                             <div><a href="#" class="flex items-center"><img
                                         src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=731&amp;q=80"
                                         alt="avatar" class="hidden object-cover w-10 h-10 mx-4 rounded-full sm:block">
-                                    <h1 class="font-bold text-gray-700 hover:underline">Alex John</h1>
+                                    <h1 class="font-bold text-gray-700 hover:underline">{{post.user.user_name}}</h1>
                                 </a></div>
                         </div>
                     </div>
+                    {{/each}}
                 </div>
-                <div class="mt-6">
-                    <div class="max-w-4xl px-10 py-6 mx-auto bg-white rounded-lg shadow-md">
-                        <div class="flex items-center justify-between"><span class="font-light text-gray-600">mar 4,
-                                2019</span><a href="#"
-                                class="px-2 py-1 font-bold text-gray-100 bg-gray-600 rounded hover:bg-gray-500">Design</a>
-                        </div>
-                        <div class="mt-2"><a href="#"
-                                class="text-2xl font-bold text-gray-700 hover:underline">Accessibility tools for
-                                designers and developers</a>
-                            <p class="mt-2 text-gray-600">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                Tempora expedita dicta totam aspernatur doloremque. Excepturi iste iusto eos enim
-                                reprehenderit nisi, accusamus delectus nihil quis facere in modi ratione libero!</p>
-                        </div>
-                        <div class="flex items-center justify-between mt-4"><a href="#"
-                                class="text-blue-500 hover:underline">Read more</a>
-                            <div><a href="#" class="flex items-center"><img
-                                        src="https://images.unsplash.com/photo-1464863979621-258859e62245?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=333&amp;q=80"
-                                        alt="avatar" class="hidden object-cover w-10 h-10 mx-4 rounded-full sm:block">
-                                    <h1 class="font-bold text-gray-700 hover:underline">Jane Doe</h1>
-                                </a></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="mt-6">
-                    <div class="max-w-4xl px-10 py-6 mx-auto bg-white rounded-lg shadow-md">
-                        <div class="flex items-center justify-between"><span class="font-light text-gray-600">Feb 14,
-                                2019</span><a href="#"
-                                class="px-2 py-1 font-bold text-gray-100 bg-gray-600 rounded hover:bg-gray-500">PHP</a>
-                        </div>
-                        <div class="mt-2"><a href="#" class="text-2xl font-bold text-gray-700 hover:underline">PHP:
-                                Array to Map</a>
-                            <p class="mt-2 text-gray-600">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                Tempora expedita dicta totam aspernatur doloremque. Excepturi iste iusto eos enim
-                                reprehenderit nisi, accusamus delectus nihil quis facere in modi ratione libero!</p>
-                        </div>
-                        <div class="flex items-center justify-between mt-4"><a href="#"
-                                class="text-blue-500 hover:underline">Read more</a>
-                            <div><a href="#" class="flex items-center"><img
-                                        src="https://images.unsplash.com/photo-1531251445707-1f000e1e87d0?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=281&amp;q=80"
-                                        alt="avatar" class="hidden object-cover w-10 h-10 mx-4 rounded-full sm:block">
-                                    <h1 class="font-bold text-gray-700 hover:underline">Lisa Way</h1>
-                                </a></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="mt-6">
-                    <div class="max-w-4xl px-10 py-6 mx-auto bg-white rounded-lg shadow-md">
-                        <div class="flex items-center justify-between"><span class="font-light text-gray-600">Dec 23,
-                                2018</span><a href="#"
-                                class="px-2 py-1 font-bold text-gray-100 bg-gray-600 rounded hover:bg-gray-500">Django</a>
-                        </div>
-                        <div class="mt-2"><a href="#" class="text-2xl font-bold text-gray-700 hover:underline">Django
-                                Dashboard - Learn by Coding</a>
-                            <p class="mt-2 text-gray-600">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                Tempora expedita dicta totam aspernatur doloremque. Excepturi iste iusto eos enim
-                                reprehenderit nisi, accusamus delectus nihil quis facere in modi ratione libero!</p>
-                        </div>
-                        <div class="flex items-center justify-between mt-4"><a href="#"
-                                class="text-blue-500 hover:underline">Read more</a>
-                            <div><a href="#" class="flex items-center"><img
-                                        src="https://images.unsplash.com/photo-1500757810556-5d600d9b737d?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=735&amp;q=80"
-                                        alt="avatar" class="hidden object-cover w-10 h-10 mx-4 rounded-full sm:block">
-                                    <h1 class="font-bold text-gray-700 hover:underline">Steve Matt</h1>
-                                </a></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="mt-6">
-                    <div class="max-w-4xl px-10 py-6 mx-auto bg-white rounded-lg shadow-md">
-                        <div class="flex items-center justify-between"><span class="font-light text-gray-600">Mar 10,
-                                2018</span><a href="#"
-                                class="px-2 py-1 font-bold text-gray-100 bg-gray-600 rounded hover:bg-gray-500">Testing</a>
-                        </div>
-                        <div class="mt-2"><a href="#" class="text-2xl font-bold text-gray-700 hover:underline">TDD
-                                Frist</a>
-                            <p class="mt-2 text-gray-600">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                                Tempora expedita dicta totam aspernatur doloremque. Excepturi iste iusto eos enim
-                                reprehenderit nisi, accusamus delectus nihil quis facere in modi ratione libero!</p>
-                        </div>
-                        <div class="flex items-center justify-between mt-4"><a href="#"
-                                class="text-blue-500 hover:underline">Read more</a>
-                            <div><a href="#" class="flex items-center"><img
-                                        src="https://images.unsplash.com/photo-1502980426475-b83966705988?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=373&amp;q=80"
-                                        alt="avatar" class="hidden object-cover w-10 h-10 mx-4 rounded-full sm:block">
-                                    <h1 class="font-bold text-gray-700 hover:underline">Khatab Wedaa</h1>
-                                </a></div>
-                        </div>
-                    </div>
-                </div>
+                
                 <div class="mt-8">
                     <div class="flex">
                         <a href="#" class="px-3 py-2 mx-1 font-medium text-gray-500 bg-white rounded-md cursor-not-allowed">
@@ -215,23 +122,13 @@
                     <h1 class="mb-4 text-xl font-bold text-gray-700">Categories</h1>
                     <div class="flex flex-col max-w-sm px-4 py-6 mx-auto bg-white rounded-lg shadow-md">
                         <ul>
-                            <li><a href="#" class="mx-1 font-bold text-gray-700 hover:text-gray-600 hover:underline">-
-                                    AWS</a></li>
-                            <li class="mt-2"><a href="#"
-                                    class="mx-1 font-bold text-gray-700 hover:text-gray-600 hover:underline">-
-                                    Laravel</a></li>
-                            <li class="mt-2"><a href="#"
-                                    class="mx-1 font-bold text-gray-700 hover:text-gray-600 hover:underline">- Vue</a>
+                            {{#each rhythms as |rhythm| }}                        
+                            <li>
+                                <a href="#" class="mx-1 font-bold text-gray-700 hover:text-gray-600 hover:underline">
+                                    - {{rhythm.name}}
+                                </a>
                             </li>
-                            <li class="mt-2"><a href="#"
-                                    class="mx-1 font-bold text-gray-700 hover:text-gray-600 hover:underline">-
-                                    Design</a></li>
-                            <li class="flex items-center mt-2"><a href="#"
-                                    class="mx-1 font-bold text-gray-700 hover:text-gray-600 hover:underline">-
-                                    Django</a></li>
-                            <li class="flex items-center mt-2"><a href="#"
-                                    class="mx-1 font-bold text-gray-700 hover:text-gray-600 hover:underline">- PHP</a>
-                            </li>
+                            {{/each}}
                         </ul>
                     </div>
                 </div>
