push for initial partial main merge

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,16 +13,33 @@
 </head>
 
 <body>
-  
-    <!-- Only display the logout button if the user is logged in -->
-   
-  
-      {{#if logged_in}}
+    <nav class="px-6 py-4 bg-white shadow">
+        <div class="container flex flex-col mx-auto md:flex-row md:items-center md:justify-between">
+            <div class="flex items-center justify-between">
+                <div class="flex-col hidden md:flex md:flex-row md:-mx-4">
+                      <!-- Only display the logout button if the user is logged in -->
+                    
+                      <a href="/" class="my-1 text-gray-800 hover:text-blue-500 md:mx-4 md:my-0">Feed</a>
+                    {{#if logged_in}}
+                      <a href="/profile" class="my-1 text-gray-800 hover:text-blue-500 md:mx-4 md:my-0">Profile</a>
+                      <a id="logout" class="my-1 text-gray-800 hover:text-blue-500 md:mx-4 md:my-0">Logout</a>
+                    {{else}}
+                      <a href='/login' class="my-1 text-gray-800 hover:text-blue-500 md:mx-4 md:my-0">Login</a>
+                      <a href='/signup' class="my-1 text-gray-800 hover:text-blue-500 md:mx-4 md:my-0">Sign-Up</a>
+                    {{/if}}
+                </div>
+                <div>
+                    <button type="button" class="block text-gray-800 hover:text-gray-600 focus:text-gray-600 focus:outline-none md:hidden">
+                        <svg viewBox="0 0 24 24" class="w-6 h-6 fill-current">
+                            <path d="M4 5h16a1 1 0 0 1 0 2H4a1 1 0 1 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2z">
+                            </path>
+                        </svg>
+                    </button>
+                </div>
+            </div>
 
-      {{else}}
-   
-      {{/if}}
-    
+        </div>
+    </nav>   
   <main class="container container-fluid mt-5">
     {{{ body }}}
   </main>
