--- a/views/feed.handlebars
+++ b/views/feed.handlebars
@@ -14,11 +14,7 @@
                     </button>
                 </div>
             </div>
-            <div class="flex-col hidden md:flex md:flex-row md:-mx-4">
-                <a href="#" class="my-1 text-gray-800 hover:text-blue-500 md:mx-4 md:my-0">Home</a>
-                <a href="#" class="my-1 text-gray-800 hover:text-blue-500 md:mx-4 md:my-0">Blog</a>
-                <a href="#" class="my-1 text-gray-800 hover:text-blue-500 md:mx-4 md:my-0">About us</a>
-            </div>
+
         </div>
     </nav>
 
@@ -37,8 +33,7 @@
                 <div class="mt-6">
                     {{#each posts as |post| }}   
                     <div class="max-w-4xl px-10 py-6 mx-auto bg-white rounded-lg shadow-md">
-                        <div class="flex items-center justify-between"><span class="font-light text-gray-600">{{format_date post.date_created}}</span><a href="#"
-                                class="px-2 py-1 font-bold text-gray-100 bg-gray-600 rounded hover:bg-gray-500">Laravel</a>
+                        <div class="flex items-center justify-between"><span class="font-light text-gray-600">{{format_date post.date_created}} by: {{post.user_id}}</span>
                         </div>
                         <div class="mt-2"><a href="#" class="text-2xl font-bold text-gray-700 hover:underline">{{post.title}}</a>
                             <p class="mt-2 text-gray-600">{{post.content}}</p>
@@ -48,7 +43,7 @@
                             <div><a href="#" class="flex items-center"><img
                                         src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=731&amp;q=80"
                                         alt="avatar" class="hidden object-cover w-10 h-10 mx-4 rounded-full sm:block">
-                                    <h1 class="font-bold text-gray-700 hover:underline">{{post.user.user_name}}</h1>
+                                    <h1 class="font-bold text-gray-700 hover:underline"></h1>
                                 </a></div>
                         </div>
                     </div>
@@ -131,6 +126,7 @@
                             {{/each}}
                         </ul>
                     </div>
+
                 </div>
                 <div class="px-8 mt-10">
                     <h1 class="mb-4 text-xl font-bold text-gray-700">Recent Post</h1>
