--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,17 +24,9 @@
                       <a href="/profile" class="my-1 text-gray-800 hover:text-blue-500 md:mx-4 md:my-0">Profile</a>
                       <a id="logout" class="my-1 text-gray-800 hover:text-blue-500 md:mx-4 md:my-0">Logout</a>
                     {{else}}
-                      <a href='/login' class="my-1 text-gray-800 hover:text-blue-500 md:mx-4 md:my-0">Login</a>
-                      <a href='/signup' class="my-1 text-gray-800 hover:text-blue-500 md:mx-4 md:my-0">Sign-Up</a>
+                      <a href='/session/login' class="my-1 text-gray-800 hover:text-blue-500 md:mx-4 md:my-0">Login</a>
+                      <a href='/session/signup' class="my-1 text-gray-800 hover:text-blue-500 md:mx-4 md:my-0">Sign-Up</a>
                     {{/if}}
-                </div>
-                <div>
-                    <button type="button" class="block text-gray-800 hover:text-gray-600 focus:text-gray-600 focus:outline-none md:hidden">
-                        <svg viewBox="0 0 24 24" class="w-6 h-6 fill-current">
-                            <path d="M4 5h16a1 1 0 0 1 0 2H4a1 1 0 1 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2z">
-                            </path>
-                        </svg>
-                    </button>
                 </div>
             </div>
 
