--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -4,26 +4,32 @@
     <h1 class="text-3xl font-semibold text-center">Let's make music! ♪</h1>
     <h2 class="text-center">To create an account, please fill out the information below...</h2>
 <!--START Sign Up START-->
-    <form class="mt-6">
-      <div class="flex justify-between gap-3">
+    <form id='signup-form' class="mt-6">
+          <!-- Username -->
+        <span class="w-1/2">
+          <label for="username" class="block text-xs font-semibold text-gray-600 uppercase">User Name</label>
+          <input id="username-signup" type="text" name="username" placeholder="JOHNDEAR" autocomplete="family-name" class="rounded-lg block w-full p-3 mt-2 text-gray-700 bg-gray-200 appearance-none focus:outline-none focus:bg-gray-300 focus:shadow-inner" required />
+        </span>
+
     <!--First Name, Last Name-->
+    <div class="flex justify-between gap-3">
         <span class="w-1/2">
           <label for="firstname" class="block text-xs font-semibold text-gray-600 uppercase">First Name</label>
-          <input id="firstname" type="text" name="firstname" placeholder="John" autocomplete="given-name" class="rounded-lg block w-full p-3 mt-2 text-gray-700 bg-gray-200 appearance-none focus:outline-none focus:bg-gray-300 focus:shadow-inner" required />
+          <input id="firstname-signup" type="text" name="firstname" placeholder="John" autocomplete="given-name" class="rounded-lg block w-full p-3 mt-2 text-gray-700 bg-gray-200 appearance-none focus:outline-none focus:bg-gray-300 focus:shadow-inner" required />
         </span>
         <span class="w-1/2">
           <label for="lastname" class="block text-xs font-semibold text-gray-600 uppercase">Last Name</label>
-          <input id="lastname" type="text" name="lastname" placeholder="Doe" autocomplete="family-name" class="rounded-lg block w-full p-3 mt-2 text-gray-700 bg-gray-200 appearance-none focus:outline-none focus:bg-gray-300 focus:shadow-inner" required />
+          <input id="lastname-signup" type="text" name="lastname" placeholder="Doe" autocomplete="family-name" class="rounded-lg block w-full p-3 mt-2 text-gray-700 bg-gray-200 appearance-none focus:outline-none focus:bg-gray-300 focus:shadow-inner" required />
         </span>
       </div>
       <!--Email-->
       <label for="email" class="block mt-2 text-xs font-semibold text-gray-600 uppercase">E-mail</label>
-      <input id="email" type="email" name="email" placeholder="john.doe@company.com" autocomplete="email" class="rounded-lg block w-full p-3 mt-2 text-gray-700 bg-gray-200 appearance-none focus:outline-none focus:bg-gray-300 focus:shadow-inner" required />
+      <input id="email-signup" type="email" name="email" placeholder="john.doe@company.com" autocomplete="email" class="rounded-lg block w-full p-3 mt-2 text-gray-700 bg-gray-200 appearance-none focus:outline-none focus:bg-gray-300 focus:shadow-inner" required />
       <!--Password-->
       <label for="password" class="block mt-2 text-xs font-semibold text-gray-600 uppercase">Password</label>
-      <input id="password" type="password" name="password" placeholder="********" autocomplete="new-password" class="rounded-lg block w-full p-3 mt-2 text-gray-700 bg-gray-200 appearance-none focus:outline-none focus:bg-gray-300 focus:shadow-inner" required />
+      <input id="password-signup" type="password" name="password" placeholder="********" autocomplete="new-password" class="rounded-lg block w-full p-3 mt-2 text-gray-700 bg-gray-200 appearance-none focus:outline-none focus:bg-gray-300 focus:shadow-inner" required />
       <label for="password-confirm" class="block mt-2 text-xs font-semibold text-gray-600 uppercase">Confirm Password</label>
-      <input id="password-confirm" type="password" name="password-confirm" placeholder="********" autocomplete="new-password" class="rounded-lg block w-full p-3 mt-2 text-gray-700 bg-gray-200 appearance-none focus:outline-none focus:bg-gray-300 focus:shadow-inner" required />
+      <input id="confpassword-signup" type="password" name="password-confirm" placeholder="********" autocomplete="new-password" class="rounded-lg block w-full p-3 mt-2 text-gray-700 bg-gray-200 appearance-none focus:outline-none focus:bg-gray-300 focus:shadow-inner" required />
       <!--Sign Up Button-->
       <button type="submit" class="rounded-lg w-full py-3 mt-6 font-medium tracking-widest text-white uppercase bg-black shadow-lg focus:outline-none hover:bg-yellow-400 hover:shadow-none">Sign up</button>
       <!--Back to Log In Page-->
@@ -32,3 +38,4 @@
   </div>
 <!--END Sign Up END-->
 </div>
+<script src="/js/signup.js"></script>
