sign up without auto login

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -31,7 +31,7 @@
               px-4 py-3 mt-6">Log In</button>
     </form>
       <!--Sign Up Link-->
-      <p class="mt-8 text-center mb-12">Don't have an account yet? <a href="#" class="text-blue-500 hover:text-blue-700 font-semibold underline ">Register here.</a></p>
+      <p class="mt-8 text-center mb-12">Don't have an account yet? <a href="/session/signup" class="text-blue-500 hover:text-blue-700 font-semibold underline ">Register here.</a></p>
 
 
     </div>
