--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -33,7 +33,7 @@
       <!--Sign Up Button-->
       <button type="submit" class="rounded-lg w-full py-3 mt-6 font-medium tracking-widest text-white uppercase bg-black shadow-lg focus:outline-none hover:bg-yellow-400 hover:shadow-none">Sign up</button>
       <!--Back to Log In Page-->
-      <p class="mt-4 text-xs text-gray-500">Already registered? <a href="#" class="text-blue-500 hover:text-blue-700 font-semibold underline">Log in.</a></p>
+      <p class="mt-4 text-xs text-gray-500">Already registered? <a href="/session/login" class="text-blue-500 hover:text-blue-700 font-semibold underline">Log in.</a></p>
     </form>
   </div>
 <!--END Sign Up END-->
