--- a/views/feed.handlebars
+++ b/views/feed.handlebars
@@ -38,8 +38,8 @@
                         <div class="mt-2"><a href="#" class="text-2xl font-bold text-gray-700 hover:underline">{{post.title}}</a>
                             <p class="mt-2 text-gray-600">{{post.content}}</p>
                         </div>
-                        <div class="flex items-center justify-between mt-4"><a href="#"
-                                class="text-blue-500 hover:underline">Read more</a>
+                        <div class="flex items-center justify-between mt-4"><button id="toggle-comments" value="{{post.id}}"
+                                class="text-blue-500 hover:underline">Show Comments</button>
                             <div><a href="#" class="flex items-center"><img
                                         src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=731&amp;q=80"
                                         alt="avatar" class="hidden object-cover w-10 h-10 mx-4 rounded-full sm:block">
@@ -117,3 +117,4 @@
         </div>
     </footer>
 </div>
+<script src="/js/comment.js"></script>
