--- a/views/feed.handlebars
+++ b/views/feed.handlebars
@@ -33,18 +33,22 @@
                 <div class="mt-6">
                     {{#each posts as |post| }}   
                     <div class="max-w-4xl px-10 py-6 mx-auto bg-white rounded-lg shadow-md">
-                        <div class="flex items-center justify-between"><span class="font-light text-gray-600">{{format_date post.date_created}} by: {{post.user_id}}</span>
+                        <div class="flex items-center justify-between"><span class="font-light text-gray-600">{{format_date post.date_created}} by: {{post.user.user_name}}</span>
                         </div>
                         <div class="mt-2"><a href="#" class="text-2xl font-bold text-gray-700 hover:underline">{{post.title}}</a>
                             <p class="mt-2 text-gray-600">{{post.content}}</p>
                         </div>
-                        <div class="flex items-center justify-between mt-4"><button id="toggle-comments" value="{{post.id}}"
-                                class="text-blue-500 hover:underline">Show Comments</button>
-                            <div><a href="#" class="flex items-center"><img
-                                        src="https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=731&amp;q=80"
-                                        alt="avatar" class="hidden object-cover w-10 h-10 mx-4 rounded-full sm:block">
-                                    <h1 class="font-bold text-gray-700 hover:underline"></h1>
-                                </a></div>
+                        <div class="flex items-center justify-between mt-4">
+                            <button id="toggle-comments" value="{{post.id}}" class="text-blue-500 hover:underline">Show Comments</button>
+                            <div class="hidden" id="comments">
+                                {{#each post.comments as |comment| }}
+                                <div>
+                                    <h1 class="font-bold text-gray-700 hover:underline">Comment!</h1>
+                                    <p>{{comment.content}}</p>
+                                
+                                </div>
+                                {{/each}}
+                            </div>
                         </div>
                     </div>
                     {{/each}}
