fixed comment.js to look for correct element

--- a/views/feed.handlebars
+++ b/views/feed.handlebars
@@ -39,16 +39,10 @@
                             <p class="mt-2 text-gray-600">{{post.content}}</p>
                         </div>
                         <div class="flex items-center justify-between mt-4">
+                            {{!-- Comments.js uses "nextSiblingElement to get to comments from the toggle-comment btn" --}}
                             <button id="toggle-comments" value="{{post.id}}" class="text-blue-500 hover:underline">Show Comments</button>
                             <div class="hidden" id="comments">
                                 <h1>Comments:</h1>
-                                {{!-- {{#each post.comments as |comment| }}
-                                <div>
-                                    <h1 class="font-bold text-gray-700 hover:underline">Comment!</h1>
-                                    <p>{{comment.content}}</p>
-                                
-                                </div>
-                                {{/each}} --}}
                             </div>
                         </div>
                     </div>
