Connect profile link and new post link

--- a/views/feed.handlebars
+++ b/views/feed.handlebars
@@ -24,10 +24,7 @@
                 <div class="flex items-center justify-between">
                     <h1 class="text-xl font-bold text-gray-700 md:text-2xl">Post</h1>
                     <div>
-                        <select class="w-full border-gray-300 rounded-md shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
-                            <option>Latest</option>
-                            <option>Last Week</option>
-                        </select>
+                        <a href="/newPost/">New Post</a>
                     </div>
                 </div>
                 <div class="mt-6">
