--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -7,7 +7,7 @@
                         <div class="flex items-center justify-between"><span class="font-light text-gray-600">{{format_date post.date_created}} by: {{post.user.user_name}}</span>
                         </div>
                         <div class="mt-2"><a href="#" class="text-2xl font-bold text-gray-700 hover:underline">{{post.title}}</a>
-                            <p class="mt-2 text-gray-600">{{post.content}}</p>
+                            <div>{{{post.content}}}</div>
                         </div>
                         <div class="flex items-center justify-between mt-4">
                             {{!-- Comments.js uses "nextSiblingElement to get to comments from the toggle-comment btn" --}}
