--- a/views/feed.handlebars
+++ b/views/feed.handlebars
@@ -60,7 +60,7 @@
                             {{#each rhythmSet as |rhythm| }}                        
                             <li>
                                 <label class="inline-flex items-center mt-3">
-                                    <input id='rhythmFilter' data-value='{{id}}' type="checkbox" class="form-checkbox h-5 w-5 text-gray-600" checked><span class="ml-2 text-gray-700">{{rhythm.name}}</span>
+                                    <input id='rhythmFilter' data-value='{{id}}' type="checkbox" class="form-checkbox h-5 w-5 text-gray-600"><span class="ml-2 text-gray-700">{{rhythm.name}}</span>
                                 </label>
                             </li>
                             {{/each}}
