--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,3 +9,18 @@
        -1px 1px 0 #000,
         1px 1px 0 #F59E0B;
 }
+:root {
+  --main-color: #4a76a8;
+}
+
+.bg-main-color {
+  background-color: var(--main-color);
+}
+
+.text-main-color {
+  color: var(--main-color);
+}
+
+.border-main-color {
+  border-color: var(--main-color);
+}
