tweaks here and there

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="px-6 py-4 bg-white shadow">
+    <nav class="px-6 py-4 bg-yellow-500 shadow-lg rounded-sm">
         <div class="container flex flex-col mx-auto md:flex-row md:items-center md:justify-between">
             <div class="flex items-center justify-between">
                 <div class="flex-col hidden md:flex md:flex-row md:-mx-4">
@@ -32,7 +32,7 @@
 
         </div>
     </nav>   
-  <main class="container container-fluid mt-5">
+  <main class="container">
     {{{ body }}}
   </main>
  
