--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -25,25 +25,25 @@
                 <!-- Profile Card -->
                 <div class="bg-white p-3 border-t-4 border-yellow-500 rounded-lg shadow-lg">
                     <div class="image overflow-hidden">
-                        <img class="h-auto w-full mx-auto"
-                            src="C:\Users\Tina Ly\Documents\Project-2\default profile picture.jpg"
+                        <img class="h-auto w-full mx-auto rounded-full"
+                            src="https://uwosh.edu/deanofstudents/wp-content/uploads/sites/156/2019/02/profile-default.jpg"
                             alt="">
                     </div>
                     <h1 class="text-gray-900 font-bold text-xl leading-8 my-1">{{user.first_name}} {{user.last_name}}</h1>
-                    <h3 class="text-gray-600 font-lg text-semibold leading-6">Username: <span>{{user.user_name}}</span></h3>
+                    <h3 class="text-gray-600 font-lg text-semibold leading-6 mb-2">Username: <span>{{user.user_name}}</span></h3>
                     <p class="text-sm text-grey-500 leading-6">BIO: {{user.bio}}.</p>
                     
                 </div>
                 <!-- End of profile card -->
                 <div class="my-4 "></div>
                 <!-- Friends card -->
-                <div class="bg-white p-3 hover:shadow rounded-lg shadow-lg">
-                    <div class="flex items-center space-x-3 font-semibold text-gray-900 text-xl leading-8">
+                <div class="bg-white p-3 rounded-lg shadow-lg">
+                    <div class="flex items-center space-x-3 font-semibold text-gray-900 text-xl leading-8 mb-4">
                         <span>Instruments</span>
                     </div>
                     <div class="grid grid-cols-3 gap-1">
                         {{#each user.instruments as |instrument| }}  
-                        <div class="rounded-lg bg-yellow-500 text-center">{{instrument.name}}</div>
+                        <div class="rounded-lg bg-yellow-600 text-center">{{instrument.name}}</div>
                         {{/each}}
                     </div>
                 </div>
