--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,6 +1,6 @@
 <div class="grid min-h-screen place-items-center">
 <!--Header-->
-  <div class="w-11/12 p-12 bg-white sm:w-8/12 md:w-1/2 lg:w-5/12">
+  <div class="w-11/12 p-12 bg-white sm:w-8/12 md:w-1/2 lg:w-5/12  border-2 shadow-lg border-gray rounded-lg">
     <h1 class="text-3xl font-semibold text-center">Let's make music! ♪</h1>
     <h2 class="text-center">To create an account, please fill out the information below...</h2>
 <!--START Sign Up START-->
@@ -8,7 +8,7 @@
           <!-- Username -->
         <span class="w-1/2">
           <label for="username" class="block text-xs font-semibold text-gray-600 uppercase">User Name</label>
-          <input id="username-signup" type="text" name="username" placeholder="JOHNDEAR" autocomplete="family-name" class="rounded-lg block w-full p-3 mt-2 text-gray-700 bg-gray-200 appearance-none focus:outline-none focus:bg-gray-300 focus:shadow-inner" required />
+          <input id="username-signup" type="text" name="username" placeholder="JOHNDOE" autocomplete="family-name" class="rounded-lg block w-full p-3 mt-2 text-gray-700 bg-gray-200 appearance-none focus:outline-none focus:bg-gray-300 focus:shadow-inner" required />
         </span>
 
     <!--First Name, Last Name-->
@@ -24,7 +24,7 @@
       </div>
       <!--Email-->
       <label for="email" class="block mt-2 text-xs font-semibold text-gray-600 uppercase">E-mail</label>
-      <input id="email-signup" type="email" name="email" placeholder="john.doe@company.com" autocomplete="email" class="rounded-lg block w-full p-3 mt-2 text-gray-700 bg-gray-200 appearance-none focus:outline-none focus:bg-gray-300 focus:shadow-inner" required />
+      <input id="email-signup" type="email" name="email" placeholder="john.doe@emaildomain.com" autocomplete="email" class="rounded-lg block w-full p-3 mt-2 text-gray-700 bg-gray-200 appearance-none focus:outline-none focus:bg-gray-300 focus:shadow-inner" required />
       <!--Password-->
       <label for="password" class="block mt-2 text-xs font-semibold text-gray-600 uppercase">Password</label>
       <input id="password-signup" type="password" name="password" placeholder="********" autocomplete="new-password" class="rounded-lg block w-full p-3 mt-2 text-gray-700 bg-gray-200 appearance-none focus:outline-none focus:bg-gray-300 focus:shadow-inner" required />
