--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -27,7 +27,7 @@
           <a href="#" class="text-xs font-semibold text-gray-700 hover:text-blue-700 focus:text-blue-700">Forgot Password?</a>
         </div>
       <!--Login Button-->
-        <button type="submit" class="w-full block bg-black hover:bg-yellow-400 focus:bg-indigo-400 text-white font-semibold rounded-lg
+        <button type="submit" class="w-full block bg-black hover:bg-blue-600 focus:bg-indigo-400 text-white font-semibold rounded-lg
               px-4 py-3 mt-6">Log In</button>
     </form>
       <!--Sign Up Link-->
