--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,28 +1,16 @@
 {{!-- Shows blog posts made by the user
         Option to add new post
         When clicking existing post, they can delete or update that post and then save it and go back to the dashboard --}}
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Profile</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Exo:wght@600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/css/tailwind.css">
-  <link rel="stylesheet" href="/css/style.css">
-</head>
 
-<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
-
-
-
-
-    <div class="container mx-auto my-5 p-5 grid grid-row-2">
+    <div class="container mx-auto p-5 grid grid-row-2 ml-12">
         <div class="md:flex no-wrap md:-mx-2 ">
             <!-- Left Side -->
             <div class="w-full md:w-3/12 md:mx-2">
                 <!-- Profile Card -->
+                <div class="bg-white p-3">
+                    <h1 class="text-2xl text-gray-700 font-bold underline">PROFILE</h1>
+                </div>
+                
                 <div class="bg-white p-3 border-t-4 border-yellow-500 rounded-lg shadow-lg">
                     <div class="image overflow-hidden">
                         <img class="h-auto w-full mx-auto rounded-full"
@@ -30,36 +18,34 @@
                             alt="">
                     </div>
                     <h1 class="text-gray-900 font-bold text-xl leading-8 my-1">{{user.first_name}} {{user.last_name}}</h1>
-                    <h3 class="text-gray-600 font-lg text-semibold leading-6 mb-2">Username: <span>{{user.user_name}}</span></h3>
-                    <p class="text-sm text-grey-500 leading-6">BIO: {{user.bio}}.</p>
+                    <h3 class="text-blue-600 font-lg text-semibold leading-6 mb-2">Username: <span class="text-black">{{user.user_name}}</span></h3>
+                    <p class="text-lg text-grey-500 leading-6 font-bold">BIO: </p><span class="font-small text-base">{{user.bio}}.</span>
                     
                 </div>
-                <!-- End of profile card -->
                 <div class="my-4 "></div>
-                <!-- Friends card -->
-                <div class="bg-white p-3 rounded-lg shadow-lg">
-                    <div class="flex items-center space-x-3 font-semibold text-gray-900 text-xl leading-8 mb-4">
-                        <span>Instruments</span>
+                <!-- Instruments Section -->
+                <div class="flex items-center space-x-3 font-bold text-gray-700 text-2xl leading-8 mb-4 underline">
+                        <span>INSTRUMENTS</span>
                     </div>
-                    <div class="grid grid-cols-3 gap-1">
+                <div class="bg-white p-1 rounded-lg shadow-lg">
+                    <div class="flex items-center space-x-3 font-semibold text-gray-900 text-2xl leading-8 mb-4 underline">
+                    </div>
+                    <div class="grid grid-cols-3 gap-1 mb-2">
                         {{#each user.instruments as |instrument| }}  
-                        <div class="rounded-lg bg-yellow-600 text-center">{{instrument.name}}</div>
+                        <div class="rounded-lg bg-yellow-500 text-center">{{instrument.name}}</div>
                         {{/each}}
                     </div>
                 </div>
-                <!-- End of friends card -->
+             
             </div>
             <!-- Right Side -->
           
-            
-            <div class="w-full md:w-9/12 mx-2 h-64 shadow-lg">
-                
-                <!-- Profile tab -->
-                
-                <!-- About Section -->
+            <div class="w-full md:w-9/12 mx-2 my-16 h-64 shadow-lg">
+
+                <!-- Previous Posts Section -->
                 <div class="bg-white p-3 shadow-lg rounded-lg">
-                    <div class="flex items-center space-x-2 font-semibold text-gray-900 leading-8">
-                        <span class="tracking-wide">About</span>
+                    <div class="flex items-center space-x-2 text-gray-900 leading-8">
+                        <span class="tracking-wide text-xl font-semibold underline">PREVIOUS POSTS</span>
                     </div>
                     <div class="text-gray-700">
                        
@@ -68,8 +54,8 @@
                 <div class="my-4"></div>
                      <div class="mt-6">
                     {{#each posts as |post| }}   
-                    <div class="max-w-4xl px-10 py-6 mx-auto bg-white rounded-lg shadow-md">
-                        <button id="editPost" class="px-3 py-2 mx-1 font-medium text-gray-700 bg-white rounded-md hover:bg-blue-500 hover:text-white">Update Post</button>
+                    <div class="max-w-4xl px-10 py-6 mx-auto bg-white mr-48 border-b-2">
+                        <button id="editPost" class="px-3 py-2 mx-1 font-medium text-white bg-black rounded-md hover:bg-blue-600 hover:text-white mb-2">Edit Post</button>
                         <div class="flex items-center justify-between"><span class="font-light text-gray-600">{{format_date post.date_created}} by: {{post.user.user_name}}</span>
                         </div>
                         <div class="mt-2"><a href="#" class="text-2xl font-bold text-gray-700 hover:underline">{{post.title}}</a>
