capture and show url

--- a/views/updatePost.handlebars
+++ b/views/updatePost.handlebars
@@ -39,7 +39,7 @@ might be able to make this same view --}}
                     <!--URL-->
                         <div class="mb-8">
                             <label class="text-xl text-gray-600">URL</label></br>
-                            <input type="text" class="rounded-lg border-2 border-gray-300 p-2 w-full" name="url" id="url" placeholder="(Optional)">
+                            <input value="{{post.url}}" type="text" class="rounded-lg border-2 border-gray-300 p-2 w-full" name="url" id="url" placeholder="(Optional)">
                         </div>
                     <!--Submit Button-->
                         <div class="flex flex-row-reverse p-1">
