--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -63,6 +63,7 @@
                         <div class="mt-2"><a href="#" class="text-2xl font-bold text-gray-700 hover:underline">{{post.title}}</a>
                             <div>{{post.rhythm.name}}</div>
                             <div>{{{post.content}}}</div>
+                            <div>{{{post.url}}}</div>
                         </div>
                         <div class="flex items-center justify-between mt-4">
                             {{!-- Comments.js uses "nextSiblingElement to get to comments from the toggle-comment btn" --}}
