--- a/views/feed.handlebars
+++ b/views/feed.handlebars
@@ -27,7 +27,7 @@
                       
                         </div>
                               <div class="mb-4 rounded-full">
-<input type="text" name="" id="comment" placeholder="Add a comment!" class="mt-4 w-full px-4 py-3 rounded-full bg-gray-200 mt-2 border focus:border-black focus:bg-white focus:outline-none " autofocus autocomplete required>
+<input type="text" name="" data-value="{{post.id}}" id="comment" placeholder="Add a comment!" class="mt-4 w-full px-4 py-3 rounded-full bg-gray-200 mt-2 border focus:border-black focus:bg-white focus:outline-none " autofocus autocomplete required>
                         </div>
                     </div>
                     {{/each}}
