--- a/views/feed.handlebars
+++ b/views/feed.handlebars
@@ -3,9 +3,9 @@
         <div class="container flex justify-between mx-auto">
             <div class="w-full lg:w-8/12">
                 <div class="flex items-center justify-between">
-                    <h1 class="text-xl font-bold text-gray-700 md:text-2xl ml-12 underline">POSTS</h1>
+                    <h1 class="text-xl font-bold text-gray-700 md:text-2xl ml-12 ">Posts</h1>
                     <div>
-                        <a href="/newPost/" class="mr-12 rounded-lg border-2 bg-black border-black text-white hover:bg-blue-600 hover:border-blue-600 font-semibold p-2">CREATE NEW POST</a>
+                        <a href="/newPost/" class="mr-12 rounded-lg border-2 bg-black border-black text-white hover:bg-blue-600 hover:border-blue-600 p-2">CREATE NEW POST</a>
                     </div>
                 </div>
                 <div class="mt-6">
@@ -37,7 +37,7 @@
             
             <div class="hidden w-4/12 -mx-8 lg:block">
                 <div class="px-8">
-                    <h1 class="mb-4 text-2xl font-bold text-gray-700 ml-6 underline">CATAGORIES</h1>
+                    <h1 class="mb-4 text-2xl font-bold text-gray-700 ml-6 ">Rhythms</h1>
                     <div class="flex flex-col max-w-sm px-4 py-6 mx-auto bg-white rounded-lg shadow-md">
                         <ul>
                             {{#each rhythmSet as |rhythm| }}                        
