--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,9 +1,11 @@
 <section class="flex flex-col md:flex-row h-screen items-center">
 <!--Intro Title/Description, Left Side-->
   <div class="bg-white-600 hidden lg:block w-full md:w-1/2 xl:w-2/3 h-screen p-24">
-    <div class ="web-title text-4xl font-bold">A-LOTTA-RHYTHMS</div>
+  <br><br><br><br><br>
+    <div class ="web-title text-4xl font-bold text-center">♪ A-LOTTA-RHYTHMS ♪</div>
     <br>
-    <div class = "desc text-xl colors-yellow-400">Website Description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quae maiores recusandae assumenda, porro praesentium sunt qui labore nostrum sit velit corrupti, amet ab rem accusantium corporis dignissimos nesciunt. Rerum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi excepturi voluptatum at repellendus laudantium dignissimos adipisci nobis, veritatis esse eum aut. Nihil alias labore fugit aperiam, praesentium fuga dolorum dolore?</div>
+    <br>
+    <div class = "desc text-xl colors-yellow-400 font-semibold text-center">Connect with other musicians, share your love of music and look for music related services. </div>
   </div>
 <!--START Login Box, Right Side START-->
   <div class="bg-white w-full md:max-w-md lg:max-w-full md:mx-auto md:mx-0 md:w-1/2 xl:w-1/3 h-screen px-6 lg:px-16 xl:px-12
