--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,15 +2,29 @@ body{
   font-family: 'Didact Gothic', sans-serif;
 }
 .web-title {
-    font-family: 'Exo', sans-serif;
+  font-family: 'Luckiest Guy', cursive;;
     -webkit-text-stroke: 1px black;
-    color: white;
+    color: #F59E0B;
+    font-size: 65px;
+    color:#fff;
     text-shadow:
-        3px 3px 0 #F59E0B,
-      -1px -1px 0 #F59E0B,  
-       1px -1px 0 #F59E0B,
-       -1px 1px 0 #000,
-        1px 1px 0 #F59E0B;
+	    -3px -3px 3px #F59E0B,
+	    3px -3px 3px #F59E0B,
+	    -3px 3px 3px #F59E0B,
+	    -3px 3px 3px #F59E0B;
+}
+
+.logo {
+  font-family: 'Luckiest Guy', cursive;;
+    -webkit-text-stroke: 1px black;
+    color: #F59E0B;
+    font-size: 25px;
+    color:#fff;
+    text-shadow:
+	    -3px   #383837,
+	    3px   #383837,
+	    -3px   #383837,
+	    -3px  #383837;
 }
 :root {
   --main-color: #4a76a8;
